--- a/ChartsExample/ChartsClient/src/app/app.component.html
+++ b/ChartsExample/ChartsClient/src/app/app.component.html
@@ -1,3 +1,8 @@
-<highcharts-chart [Highcharts]="Highcharts" [options]="chartOption" style="width: 100%;height: 100%;">
+<highcharts-chart 
+[Highcharts]="Highcharts" 
+[options]="chartOptions" 
+[update] = "updateFromInput"
+[callbackFunction] = "chartCallback"
+style="width: 100%;height: 100%;">
 
 </highcharts-chart>
